--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         {
             "name": "Zeljko Simic",
             "email": "zeljkosbgd@gmail.com"
-        },
+        }
     ],
     "autoload": {
         "psr-4": {"G4\\Factory\\": "src/"}
@@ -34,6 +34,6 @@
         "phpunit/phpunit": "5.*"
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=5.6"
     }
 }
