Removed makefile; test command in composer

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,10 @@
     },
     "require": {
         "php": ">=5.4"
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit -c test/phpunit.xml"
+        ]
     }
 }
